--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,66 +27,13 @@
             app:theme="@style/ToolBarStyle"
             app:title="@string/accueil"/>
 
-        <CalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_agenda"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            >
-
-        </CalendarView>
-
-        <RelativeLayout
-            android:layout_marginTop="25dp"
-            android:layout_width="350dp"
-            android:background="@drawable/bg_agenda"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:padding="5dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/displayEventDate"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_marginRight="10dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                ></TextView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/displayEvent"
-                android:textColor="@android:color/black"
-                android:layout_toRightOf="@id/displayEventDate"
-                android:text="@string/aucunEvenement"
-                ></TextView>
-
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/addEventBtn"
-                android:layout_toLeftOf="@id/displayEvent"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:padding="5dp"
-                android:background="@drawable/ic_add_event_hdpi"
-                android:textColor="@color/quantum_white_100"
-                ></Button>
-
-        </RelativeLayout>
-
         <!-- FrameLayout for our fragments -->
         <FrameLayout
             android:id="@+id/activity_main_frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent">
+
+        </FrameLayout>
 
 
 
