--- a/app/src/main/res/menu/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_main_menu_drawer.xml
@@ -7,38 +7,42 @@
         <item
             android:id="@+id/activity_main_drawer_home"
             android:icon="@drawable/ic_action_home_black_mdpi"
-            android:title="Home" />
+            android:title="@string/accueil" />
+        <item
+            android:id="@+id/activity_main_drawer_agenda"
+            android:icon="@drawable/ic_action_calendar_today_mdpi"
+            android:title="@string/agenda" />
         <item
             android:id="@+id/activity_main_drawer_news"
             android:icon="@drawable/ic_action_news_black_mdpi"
-            android:title="News" />
+            android:title="@string/news" />
         <item
             android:id="@+id/activity_main_drawer_shops"
             android:icon="@drawable/ic_action_shop_black_mdpi"
-            android:title="Shopping" />
+            android:title="@string/shopping" />
 
         <item
             android:id="@+id/activity_main_drawer_social"
             android:icon="@drawable/ic_action_social_black_mdpi"
-            android:title="Social Networks" />
+            android:title="@string/reseaux" />
         <item
             android:id="@+id/activity_main_drawer_ads"
             android:icon="@drawable/ic_action_ad_black_mdpi"
-            android:title="Ads" />
+            android:title="@string/publicites" />
     </group>
 
-    <item android:title="Configuration">
+    <item android:title="@string/configuration">
         <menu>
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/activity_main_drawer_profile"
                     android:icon="@drawable/ic_action_profil_black_mdpi"
 
-                    android:title="Profil" />
+                    android:title="@string/profil" />
                 <item
                     android:id="@+id/activity_main_drawer_settings"
                     android:icon="@drawable/ic_action_settings_black_mdpi"
-                    android:title="Paramètres" />
+                    android:title="@string/parametres" />
             </group>
         </menu>
     </item>
